--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 h1 {
-  font-family: "Josefin Sans", serif;
+  font-family: "Josefin Sans", sans-serif;
   font-size: 2rem;
   letter-spacing: 1.2em;
   border-bottom: solid 3px rgb(115, 115, 114);
